--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node ./src/index.ts",
+    "build": "tsc",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Sindre Slungaard",
+  "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.1",
+    "@types/winston": "^2.4.4",
+    "@types/ws": "^6.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
-    "typescript": "^3.5.3"
+    "express": "^4.17.1",
+    "typescript": "^3.5.3",
+    "winston": "^3.2.1",
+    "ws": "^7.1.2"
   },
   "devDependencies": {
     "ts-node": "^8.3.0"
