--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,14 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.13",
+    "@types/shortid": "0.0.29",
     "@types/winston": "^2.4.4",
     "@types/ws": "^6.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.9",
+    "shortid": "^2.2.14",
     "typescript": "^3.5.3",
     "winston": "^3.2.1",
     "ws": "^7.1.2"
