--- a/server/package.json
+++ b/server/package.json
@@ -12,19 +12,25 @@
   "author": "Sindre Slungaard",
   "license": "MIT",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/mongoose": "^5.5.13",
     "@types/shortid": "0.0.29",
+    "@types/uniqid": "^4.1.3",
     "@types/winston": "^2.4.4",
     "@types/ws": "^6.0.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.9",
     "shortid": "^2.2.14",
     "typescript": "^3.5.3",
+    "uniqid": "^5.0.3",
     "winston": "^3.2.1",
     "ws": "^7.1.2"
   },
