--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -17,9 +17,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
+    - name: npm install and build
       run: |
         cd server
+        npm install
         npm run build --if-present
       env:
         CI: true
