Set current working directory for vsc debug sessions

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
+            "cwd": "${workspaceRoot}",
             "program": "${workspaceRoot}/cmd/duel-masters/main.go",
             "env": {},
             "args": [],
