--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
     "vue": "^2.6.11",
+    "vue-js-modal": "^2.0.0-rc.3",
     "vue-router": "^3.3.2",
     "vuex": "^3.4.0"
   },
