--- a/webapp/.editorconfig
+++ b/webapp/.editorconfig
@@ -1,4 +1,4 @@
-[*.{js,jsx,json,ts,tsx,vue}]
+[*.{js,jsx,json,ts,tsx,vue,scss}]
 indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
