--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
+    "lodash": "^4.17.19",
     "vue": "^2.6.11",
     "vue-js-modal": "^2.0.0-rc.3",
     "vue-router": "^3.3.2",
