update to github's new package registry

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -14,7 +14,6 @@ jobs:
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.REGISTRY_TOKEN }}
-          registry: docker.pkg.github.com
+          registry: ghcr.io
           repository: sindreslungaard/duel-masters/production
           tags: latest
-
