--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,12 +7,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint --no-fix",
     "lint-fix": "vue-cli-service lint",
-    "watch": "vue-cli-service build --watch"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
-    }
+    "watch": "vue-cli-service build --watch",
+    "prepare": "cd .. && husky install webapp/.husky"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -34,7 +30,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
-    "husky": "^4.2.5",
+    "husky": "^7.0.1",
     "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
