--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,15 +14,16 @@
     "axios": "^0.21.1",
     "clipboard": "^2.0.6",
     "lodash": "^4.17.21",
-    "vue": "^2.6.11",
-    "vue-js-modal": "^2.0.0-rc.3",
-    "vue-router": "^3.3.2",
-    "vuex": "^3.4.0"
+    "vue": "^3.1.4",
+    "vue-final-modal": "^3.3.1",
+    "vue-router": "^4.0.10",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-plugin-eslint": "^5.0.0-beta.2",
     "@vue/cli-service": "^4.5.13",
+    "@vue/compiler-sfc": "^3.1.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.30.0",
     "eslint-plugin-import": "^2.23.4",
@@ -32,8 +33,7 @@
     "eslint-plugin-vue": "^7.13.0",
     "husky": "^7.0.1",
     "sass": "^1.26.8",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass-loader": "^8.0.2"
   },
   "babel": {
     "presets": [
@@ -46,7 +46,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/recommended"
+      "plugin:vue/vue3-recommended"
     ],
     "parserOptions": {
       "parser": "babel-eslint",
