--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,9 +20,9 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-babel": "^5.0.0-beta.2",
     "@vue/cli-plugin-eslint": "^5.0.0-beta.2",
-    "@vue/cli-service": "^4.5.13",
+    "@vue/cli-service": "^5.0.0-beta.2",
     "@vue/compiler-sfc": "^3.1.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.30.0",
@@ -32,7 +32,7 @@
     "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^7.13.0",
     "husky": "^7.0.1",
-    "sass": "^1.26.8",
+    "sass": "^1.35.2",
     "sass-loader": "^8.0.2"
   },
   "babel": {
