--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "clipboard": "^2.0.6",
     "date-fns": "^2.25.0",
     "dayjs": "^1.10.7",
+    "marked": "^5.1.0",
     "vue": "^2.6.11",
     "vue-js-modal": "^2.0.0-rc.3",
     "vue-router": "^3.3.2",
