--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,7 +1,8 @@
 name: Publish Docker image
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - production
 jobs:
   push_to_registry:
     name: Push Docker image to GitHub Packages
