--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "watch": "vue-cli-service build --watch"
+    "watch": "set NODE_OPTIONS=--openssl-legacy-provider & vue-cli-service build --watch"
   },
   "dependencies": {
     "axios": "^0.21.1",
