--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,5 +1,5 @@
 name: Go
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
         with:
           go-version: '1.18.x'
       - name: Install dependencies
-        run: go get .
+        run: go get ./...
       - name: Build
         run: go build -v ./cmd/duel-masters
 #      - name: Test with the Go CLI
