Added 'Rain of Arrows' and 'Comet Missile'

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,8 @@
             "program": "${workspaceRoot}/cmd/duel-masters/main.go",
             "env": {},
             "args": [],
-            "envFile": "${workspaceFolder}/.env"
+            "envFile": "${workspaceFolder}/.env",
+            "dlvFlags": ["--check-go-version=false"]
         }
     ]
 }
