Remove delve --check-go-version flag - Should instead update delve to support the used Go version

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,8 +13,7 @@
             "program": "${workspaceRoot}/cmd/duel-masters/main.go",
             "env": {},
             "args": [],
-            "envFile": "${workspaceFolder}/.env",
-            "dlvFlags": ["--check-go-version=false"]
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
