--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,8 +20,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.1",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.40",
     "sass": "^1.26.8",
+    "tailwindcss": "^3.4.7",
     "vite": "^5.3.5"
   },
   "browserslist": [
