Add image lazy loading

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.10.7",
     "marked": "^13.0.0",
     "setimmediate": "^1.0.5",
+    "v-lazy-image": "^2.1.1",
     "vue": "^3.4.34",
     "vue-router": "^4.4.0",
     "vuex": "^4.1.0"
