--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,6 +17,7 @@
     "setimmediate": "^1.0.5",
     "v-lazy-image": "^2.1.1",
     "vue": "^3.4.34",
+    "vue-multiselect": "^3.1.0",
     "vue-router": "^4.4.0",
     "vuex": "^4.1.0"
   },
