--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,5 +15,5 @@ jobs:
         run: go get ./...
       - name: Build
         run: go build -v ./cmd/duel-masters
-#      - name: Test with the Go CLI
-#        run: go test
+      - name: Test with the Go CLI
+        run: go test ./tests
